// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arch Bot FYI Submitted Creates a Comment in Admin Repository 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "fyi-requested",
        "number": 282,
        "owner": "choosenearme",
        "repo": "fyis",
      },
    ],
  ],
}
`;

exports[`Arch Bot FYI Submitted Creates a Comment in Admin Repository 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "labels": Array [
          "fyi-submitted",
        ],
        "number": 282,
        "owner": "choosenearme",
        "repo": "fyis",
      },
    ],
  ],
}
`;

exports[`Arch Bot FYI Submitted Creates a Comment in Admin Repository 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "body": "[FYI](https://cnissues.atlassian.net/wiki/spaces/ARCH/pages/357302331/congenial-system) has been submitted.",
        "number": 282,
        "owner": "choosenearme",
        "repo": "fyis",
      },
    ],
  ],
}
`;

exports[`Arch Bot FYI Submitted Creates a Comment in Admin Repository 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "turbo-octo-engine",
    ],
  ],
}
`;
